# cdc-pipeline-generator

./: .env.example  .gitignore  DOCKER_VERSION_FIX.md  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  METADATA_COMMENTS_FIX.md  MIGRATION_PLAN.md  Makefile  README.md  cdc.fish  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  setup.py  test-local.py  test_rpk.yaml
.github/: copilot-coding-guidelines.md  copilot-instructions-architecture.md  copilot-instructions-coding-guidelines.md  copilot-instructions-dev-workflow.md  copilot-instructions-type-safety.md  copilot-instructions.md  copilot-instructions.md.backup  instructions-architecture.md  instructions-dev-workflow.md  instructions-type-safety.md
.github/agents/: cdc-cli-expert.agent.md  pgsql-mssql-expert.agent.md
.github/decisions/: 0000-template.md  0001-split-copilot-instructions.md  0002-strict-type-checking.md  0003-shared-data-structures.md  0004-runtime-bloblang-validation.md  0005-schema-management-and-type-definitions.md  0006-pattern-cli-audit-and-preprod-compat-policy.md  README.md
.github/scripts/: version_bump.py
.github/workflows/: docker-publish.yml  docker-publish.yml.disabled  publish-to-pypi.yml  publish-to-pypi.yml.disabled
.test-workspace/: README.md
_docs/: EXTRACTION_PATTERNS.md  PATTERN_AND_CLI_AUDIT_SUMMARY.md  PROJECT_INITIALIZATION.md  README.md  SCAFFOLDING.md  SCAFFOLDING_IMPLEMENTATION.md  SINK_SERVER_GROUPS.md
_docs-migrations/: MANAGE_MIGRATIONS_STATUS.md  MIGRATION_IMPLEMENTATION_PLAN.md  MIGRATION_IMPLEMENTATION_RESULT.md
_docs/_stats/: README.md  igor.efrem.txt  stats.md
_docs/architecture/: BENTO_MIGRATION_DECISION_PLAN.md  CDC_EVENT_TRACING.md  CDC_PRODUCTION_SAFEGUARDS.md  DESTRUCTIVE_CHANGES.md  EVENT_DRIVEN_MERGE_SYSTEM.md  MIGRATIONS.md  NATIVE_CDC_RUNTIME.md  PIPELINES.md  POSTGRES_NATIVE_CDC_OPTION.md  STREAMING_ALTERNATIVES.md  TDS_FDW_IMPLEMENTATION_GUIDE.md  TEMPLATES.md  TOPOLOGY_RUNTIME_COMPOSITION.md
_docs/bento-bloblang/: 01-BLOBLANG-FUNDAMENTALS.md  02-BLOBLANG-METHODS.md  03-BLOBLANG-FUNCTIONS.md  04-HTTP-INPUTS.md  05-SQL-PATTERNS.md  06-ERROR-HANDLING.md  07-PIPELINE-PATTERNS.md  08-PIPELINE-TEMPLATING.md  README.md
_docs/cli/: SOURCE_CUSTOM_KEYS.md
_docs/command-stats/: README.md  build_command_stats.py  stats.md
_docs/development/: ADAPTIVE_NATIVE_CDC_POLLING_GAP_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  ASMA_BUN_CDCRUNNER_ARCHITECTURE_AND_IMPLEMENTATION_PLAN.md  ASMA_CDC_ORCHESTRATOR_ARCHITECTURE_AND_IMPLEMENTATION_PLAN.md  AUTONOMOUS_REFACTOR_EXECUTION_MASTER_PLAN.md  CODING_STANDARDS.md  FDW_SCAFFOLD_AND_DB_PER_TENANT_SOURCE_GROUP_IMPLEMENTATION_PLAN.md  GAP_ANALYSIS_COMMAND_GROUPING.md  PIPELINE_MANAGEMENT_IMPLEMENTATION_PLAN.md  PIPELINE_TEST_MODES.md  REPO_WIDE_PY_SIZE_AND_CODING_GUIDELINES_GAP_ANALYSIS_AND_PHASED_PLAN.md  SINK_ENV_AWARE_REFACTOR_GAP_ANALYSIS_AND_PHASED_PLAN.md  SINK_ENV_AWARE_UNIQUE_ROUTING_IMPLEMENTATION_REPORT.md  TEST_AUDIT_REPORT.md  TEST_CLEANUP.md
_docs/getting-started/: MONITORING.md  TROUBLESHOOTING.md  UI_ACCESS.md
_docs/redpanda-connect/: 03-BLOBLANG-FUNCTIONS.md  05-SQL-PATTERNS.md  07-PIPELINE-PATTERNS.md
cdc_generator/: __init__.py
cdc_generator/cli/: __init__.py  check_command.py  click_commands.py  click_commands_column_templates.py  click_commands_fdw.py  click_commands_pipeline_migrations.py  click_commands_resources.py  click_commands_resources_inspect.py  click_commands_schema_resources.py  click_commands_server_groups.py  click_commands_service_config.py  click_commands_source_overrides.py  column_templates.py  commands.py  commands_help.py  completions.py  completions_context.py  completions_custom_and_sink_groups.py  completions_map_columns.py  completions_names_envs.py  completions_pg_types_columns.py  completions_schema_templates.py  completions_sink_keys_templates.py  completions_source_overrides.py  completions_tables_and_sinks.py  completions_wrappers_general.py  fdw.py  init.py  init_project.py  migration_apply.py  migration_clean_cdc.py  migration_cli_validation.py  migration_diff.py  migration_enable_cdc.py  migration_generate.py  migration_status.py  pipeline_diff.py  pipeline_health.py  pipeline_list.py  (+46 more)
docs/: PROJECT_INITIALIZATION.md  SCAFFOLDING.md  SCAFFOLDING_IMPLEMENTATION.md
tests/: __init__.py  _namespace_defaults.py  conftest.py  test_autocompletion_helpers.py  test_autocompletion_schemas.py  test_autocompletion_types.py  test_cleanup_strategy.py  test_cli_column_templates.py  test_cli_completions.py  test_column_template_definitions.py  test_column_template_operations.py  test_column_templates.py  test_commands_main.py  test_custom_table_parsing.py  test_dispatch.py  test_dispatch_e2e.py  test_dispatch_routing.py  test_extra_columns.py  test_fdw_bootstrap.py  test_fish_completions.py  test_helpers_env.py  test_helpers_sink_groups_metadata.py  test_inspect_all_services.py  test_inspect_handlers.py  test_list_create_misc_handlers.py  test_manage_schema_custom_tables_passthrough.py  test_migration_apply.py  test_migration_cli_validation.py  test_migration_diff.py  test_migration_e2e.py  test_migration_generator.py  test_migration_ops.py  test_migration_status.py  test_native_migration_generator.py  test_pg_schema_validation.py  test_pipeline_generation.py  test_scaffolding_template_resolution.py  test_schema_saver_default_values.py  test_schema_saver_paths.py  test_schema_saver_tracked_tables.py  (+40 more)
(+239 files in other folders)
