[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-pipeline-generator"
version = "0.2.0"
description = "CDC pipeline configuration generator for Redpanda Connect"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Igor Efrem", email = "igor@carasent.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.17",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Database connectivity - heavy dependencies for DB inspection
database = [
    "pymssql>=2.2",
    "psycopg2-binary>=2.9",
]

# Full installation - everything needed for development/production
full = [
    "pymssql>=2.2",
    "psycopg2-binary>=2.9",
]

# Development tools
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/carasent/cdc-pipeline-generator"
Repository = "https://github.com/carasent/cdc-pipeline-generator"
"Bug Tracker" = "https://github.com/carasent/cdc-pipeline-generator/issues"

[project.scripts]
cdc = "cdc_generator.cli.commands:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdc_generator*"]

[tool.setuptools.package-data]
cdc_generator = [
    "templates/init/*",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
